# laz_logger

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: CodeFormat.cmake  SpdLog.cmake
include/: Log.hpp
include/lazlogger/: LoggerManager.hpp
src/: LoggerManager.cpp
